tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_errors_if_trait_is_not_in_scope_for_function_call_and_there_are_multiple_candidates/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Could not resolve 'foo' in path
  ┌─ src/main.nr:3:22
  │
3 │         let _ = Bar::foo();
  │                      --- The following traits which provide `foo` are implemented but not in scope: `private_mod::Foo2`, `private_mod::Foo`
  │

Aborting due to 1 previous error
